2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support

2007-06-18  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile.am: updates to pass distcheck target

2007-06-17  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/sctpresults.tex: updates for release

2007-06-16  Brian Bidulock  <bidulock@openss7.org>

	* doc/papers/Makefile: updates for release
	* doc/papers/Makefile.am: updates for release
	* doc/papers/netperf_centos.dat: updates for release
	* doc/papers/netperf_centos_comp.plot: updates for release
	* doc/papers/netperf_centos_delay.plot: updates for release
	* doc/papers/netperf_centos_perf.plot: updates for release
	* doc/papers/netperf_centos_thrput.plot: updates for release
	* doc/papers/netperf_fc6.dat: updates for release
	* doc/papers/netperf_fc6_comp.plot: updates for release
	* doc/papers/netperf_fc6_delay.plot: updates for release
	* doc/papers/netperf_fc6_perf.plot: updates for release
	* doc/papers/netperf_fc6_thrput.plot: updates for release
	* doc/papers/netperf_nb.dat: updates for release
	* doc/papers/netperf_nb_comp.plot: updates for release
	* doc/papers/netperf_nb_delay.plot: updates for release
	* doc/papers/netperf_nb_perf.plot: updates for release
	* doc/papers/netperf_nb_thrput.plot: updates for release
	* doc/papers/netperf_rh7.dat: updates for release
	* doc/papers/netperf_rh7_comp.plot: updates for release
	* doc/papers/netperf_rh7_delay.plot: updates for release
	* doc/papers/netperf_rh7_perf.plot: updates for release
	* doc/papers/netperf_rh7_thrput.plot: updates for release
	* doc/papers/netperf_smp.dat: updates for release
	* doc/papers/netperf_smp_comp.plot: updates for release
	* doc/papers/netperf_smp_delay.plot: updates for release
	* doc/papers/netperf_smp_perf.plot: updates for release
	* doc/papers/netperf_smp_thrput.plot: updates for release
	* doc/papers/netperf_suse.dat: updates for release