@@ -1,6 +1,6 @@
 /*****************************************************************************
 
- @(#) $RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.70 $) $Date: 2007/05/26 06:52:56 $
+ @(#) $RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2007/06/20 06:36:54 $
 
  -----------------------------------------------------------------------------
 
@@ -45,11 +45,14 @@
 
  -----------------------------------------------------------------------------
 
- Last Modified $Date: 2007/05/26 06:52:56 $ by $Author: brian $
+ Last Modified $Date: 2007/06/20 06:36:54 $ by $Author: brian $
 
  -----------------------------------------------------------------------------
 
  $Log: sctp2.c,v $
+ Revision 0.9.2.71  2007/06/20 06:36:54  brian
+ - updates for Fedora 7 and 2.6.21 kernel
+
  Revision 0.9.2.70  2007/05/26 06:52:56  brian
  - get rid of compiler warning
 
@@ -145,10 +148,10 @@
 
  *****************************************************************************/
 
-#ident "@(#) $RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.70 $) $Date: 2007/05/26 06:52:56 $"
+#ident "@(#) $RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2007/06/20 06:36:54 $"
 
 static char const ident[] =
-    "$RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.70 $) $Date: 2007/05/26 06:52:56 $";
+    "$RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2007/06/20 06:36:54 $";
 
 #define _LFS_SOURCE
 #define _SVR4_SOURCE
@@ -166,7 +169,7 @@ static char const ident[] =
 
 #define SCTP_DESCRIP	"SCTP/IP STREAMS (NPI/TPI) DRIVER."
 #define SCTP_EXTRA	"Part of the OpenSS7 Stack for Linux Fast-STREAMS."
-#define SCTP_REVISION	"OpenSS7 $RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.70 $) $Date: 2007/05/26 06:52:56 $"
+#define SCTP_REVISION	"OpenSS7 $RCSfile: sctp2.c,v $ $Name:  $($Revision: 0.9.2.71 $) $Date: 2007/06/20 06:36:54 $"
 #define SCTP_COPYRIGHT	"Copyright (c) 1997-2007  OpenSS7 Corporation.  All Rights Reserved."
 #define SCTP_DEVICE	"Supports Linux Fast-STREAMS and Linux NET4."
 #define SCTP_CONTACT	"Brian Bidulock <bidulock@openss7.org>"
@@ -5085,8 +5088,17 @@ sctp_update_routes(struct sctp *sp, int force_reselect)
 #if defined HAVE_KMEMB_STRUCT_INET_PROTOCOL_PROTOCOL
 			err = ip_route_connect(&rt, sd->daddr, 0, RT_CONN_FLAGS(sp), 0);
 #else
+#if defined HAVE_KFUNC_IP_ROUTE_CONNECT_9_ARGS
 			err = ip_route_connect(&rt, sd->daddr, 0, RT_CONN_FLAGS(sp), 0,
 					       IPPROTO_SCTP, sp->sport, sp->dport, NULL);
+#else
+#if defined HAVE_KFUNC_IP_ROUTE_CONNECT_10_ARGS
+			err = ip_route_connect(&rt, sd->daddr, 0, RT_CONN_FLAGS(sp), 0,
+					       IPPROTO_SCTP, sp->sport, sp->dport, NULL, 0);
+#else
+#error Need a usable ip_route_connect() prototype.
+#endif
+#endif
 #endif
 			if (err < 0 || !rt || rt->u.dst.obsolete) {
 				rare();
@@ -5157,8 +5169,17 @@ sctp_update_routes(struct sctp *sp, int force_reselect)
 #if defined HAVE_KMEMB_STRUCT_INET_PROTOCOL_PROTOCOL
 			if (!ip_route_connect(&rt2, rt->rt_dst, 0, RT_CONN_FLAGS(sp), sd->dif))
 #else
+#if defined HAVE_KFUNC_IP_ROUTE_CONNECT_9_ARGS
 			if (!ip_route_connect(&rt2, rt->rt_dst, 0, RT_CONN_FLAGS(sp), sd->dif,
 					      IPPROTO_SCTP, sp->sport, sp->dport, NULL))
+#else
+#if defined HAVE_KFUNC_IP_ROUTE_CONNECT_10_ARGS
+			if (!ip_route_connect(&rt2, rt->rt_dst, 0, RT_CONN_FLAGS(sp), sd->dif,
+					      IPPROTO_SCTP, sp->sport, sp->dport, NULL, 0))
+#else
+#error Need a usable ip_route_connect() prototype.
+#endif
+#endif
 #endif
 			{
 				if (rt2->rt_src != rt->rt_src) {
